--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@classycrafter/super-logger",
-  "version": "1.4.35",
+  "version": "2.0.00",
   "description": "A super customisable logger",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "node test"
+    "test": "node lib/test",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,10 +28,14 @@
   },
   "homepage": "https://github.com/TheDogHusky/super-logger#readme",
   "dependencies": {
+    "@types/node": "^18.11.9",
     "chalk": "^4.1.2",
     "fs": "^0.0.1-security",
-    "moment": "^2.29.2",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
   }
 }
